Always check if context is valid when calling pa functions

If pa_context is null, pulseaudio aborts.

BUG: 375872
FIXED-IN: 5.8.6

Differential Revision: https://phabricator.kde.org/D4402